<resources>
    <string name="app_name">Weibo</string>
    <string name="home">首页</string>
    <string name="profile">个人资料</string>
    <string name="logout">注销</string>
    <string name="detail">正文</string>
    <string name="weibo">微博</string>
    <string name="oauthing">授权中……</string>
    <string name="sina_server_error">服务器错误</string>
    <string name="token_expires_in_time">你只能用 %s
        天，我是会过期的</string>
    <string name="your_token_is_expired">信息过期了，吃了药生病的</string>
    <string name="logout_to_login_again">返回帐号管理页面，重新授权</string>
    <string name="dialog_title_error">出错啦！啦！啦！</string>
    <string name="login_again">重新授权</string>
    <string name="have_account_whose_token_is_expired">有账号过期了，狠心删掉它</string>
    <string name="token_has_expired">已过期</string>
    <string name="dont_have_other_account">就你一个人了哦</string>
    <string name="tip_dialog_title">提示</string>
    <string name="tip_dialog_content">这只是个beta版，要出错的</string>
    <string name="title_changelog">更新日志</string>
    <string name="changelog_close">我晓得了</string>
    <string name="weibo_emotions">微博表情</string>
    <string name="download_emotions">下载表情</string>
    <string name="background_downloading">后台下载中</string>
    <string name="empty">空</string>
    <string name="year">年前</string>
    <string name="month">月前</string>
    <string name="day">天前</string>
    <string name="hour">小时前</string>
    <string name="min">分钟前</string>
    <string name="sec">秒前</string>
    <string name="justnow">刚刚</string>
    <string name="yesterday">昨天</string>
    <string name="the_day_before_yesterday">前天</string>
    <string name="today">今天</string>
    <string name="date_format">M月d日 HH:mm</string>
    <string name="year_format">yyyy年 M月d日 HH:mm</string>
    <string name="close">关闭</string>
    <string name="big_pic">原图</string>
    <string name="share">分享</string>
    <string name="share_to">分享到</string>
    <string name="copy_to_clipboard">复制</string>
    <string name="copy_successfully">复制完成</string>
    <string name="have_copied">已经复制 %s</string>
    <string name="open">打开</string>
    <string name="switch_to_another_theme">夜间模式</string>
    <string name="copy">复制</string>
    <string name="timeout">网络有问题，连不上</string>
    <string name="unknown_error_error_code">未知错误，错误代码</string>
    <string name="unknown_sina_network_error">网络错误</string>
    <string name="sd_card_in_not_mounted">SD卡未挂载</string>
    <string name="something_error">发生故障</string>
    <string name="please_deleted_cache_dir">无法读取存储空间</string>
    <string name="refresh">刷新</string>
    <string name="refreshing">刷新中……</string>
    <string name="no_new_message">没有新消息</string>
    <string name="total">共计</string>
    <string name="new_messages_count">%s条新消息</string>
    <string name="new_messages">条新消息</string>
    <string name="old_messages">条旧消息</string>
    <string name="weibos">条微博</string>
    <string name="loading">载入中……</string>
    <string name="click_to_load_some_older_msg">点击载入中间数据</string>
    <string name="loading_middle_msg">载入中间数据……</string>
    <string name="click_to_load_older_message">网络有问题，点击重新载入</string>
    <string name="older_message_empty">没有更早的消息了</string>
    <string name="more">载入更多</string>
    <string name="browser_all_messages">浏览全部微博</string>
    <string name="message_list">消息列表</string>
    <string name="message_number">微博消息</string>
    <string name="following_list">关注列表</string>
    <string name="fan_list">粉丝列表</string>
    <string name="topic_number">话题数</string>
    <string name="topic_list">话题列表</string>
    <string name="weibo_number">微博数</string>
    <string name="follow_him">关注</string>
    <string name="manage_group">管理分组</string>
    <string name="unfollow_him">取消关注</string>
    <string name="follow_successfully">关注成功</string>
    <string name="unfollow_successfully">已经取消关注</string>
    <string name="modify_successfully">修改完成</string>
    <string name="remove_fan_successfully">Ta 已经不再关注你了</string>
    <string name="m">男</string>
    <string name="f">女</string>
    <string name="verified_user">认证账户</string>
    <string name="verified_reason">新浪认证</string>
    <string name="is_following_me">正在关注</string>
    <string name="mentions">提及</string>
    <string name="comments">评论</string>
    <string name="discover">探索</string>
    <string name="me">个人</string>
    <string name="repost">转发</string>
    <string name="mail">私信</string>
    <string name="info">资料</string>
    <string name="write_weibo">写微博</string>
    <string name="at_other">添加好友</string>
    <string name="only_at_char">"@</string>
    <string name="emoticon">表情</string>
    <string name="word_emoticon">颜文字</string>
    <string name="topic">话题</string>
    <string name="txt_to_pic">文字转图片</string>
    <string name="clear_content">清空内容</string>
    <string name="are_you_sure">确定吗？</string>
    <string name="ask_clear">清空内容？</string>
    <string name="short_content_middle">精简中间\@</string>
    <string name="short_content_right">精简右侧\@</string>
    <string name="clear">清空</string>
    <string name="add_gps">添加GPS</string>
    <string name="add_pic">添加照片</string>
    <string name="add_emoticon">添加表情</string>
    <string name="view_gps">查看</string>
    <string name="delete_gps">删除</string>
    <string name="comment_cant_be_empty">评论不能为空</string>
    <string name="send_successfully">发送成功</string>
    <string name="send_failed">发送失败</string>
    <string name="cancel_send">取消上传</string>
    <string name="retry_send">重新发送</string>
    <string name="send_faile_click_to_open">发送失败，点击打开</string>
    <string name="send_failed_and_save_to_draft">发送失败，已保存到草稿箱</string>
    <string name="cancel_send_and_save_to_draft">取消上传，已保存到草稿箱</string>
    <string name="click_to_open_draft">点击打开草稿箱</string>
    <string name="click_to_open">点击打开</string>
    <string name="background_sending">发送中</string>
    <string name="wait_server_response">发送完，等结果</string>
    <string name="send_photo">发送照片</string>
    <string name="dont_have_account">没用可用的发微博帐号</string>
    <string name="content_cant_be_empty">内容不能为空</string>
    <string name="content_cant_be_empty_and_dont_have_account">内容不能为空，当前也没可用的发微博帐号</string>
    <string name="content_words_number_too_many">字数太多的啦，要一些吧</string>
    <string name="enable_comment_when_repost">评论给当前微博</string>
    <string name="enable_comment_to_ori_when_repost">评论给原微博</string>
    <string name="enable_comment_to_ori_when_comment">评论给原微博</string>
    <string name="enable_repost">转发到我的微博</string>
    <string name="comment_detail">评论</string>
    <string name="cant_insert_album">发生意外，无法写入相册</string>
    <string name="dont_have_camera_app">该设备没有拍照应用</string>
    <string name="select">选择</string>
    <string name="get_the_last_picture">刚拍的照片</string>
    <string name="dont_have_the_last_picture">没有找到拍过的照片</string>
    <string name="take_camera">马上拍一张</string>
    <string name="select_pic">图库</string>
    <string name="send">发送</string>
    <string name="sending">发送中</string>
    <string name="photo">照片</string>
    <string name="say_something">说点什么吧……</string>
    <string name="left">剩余</string>
    <string name="share_pic">分享图片</string>
    <string name="save_to_draft">保存到草稿箱</string>
    <string name="do_you_want_to_save">要保存到草稿箱吗？</string>
    <string name="save">保存</string>
    <string name="convert_successfully">转换成功，你可以精简文字了</string>
    <string name="convert_failed">转换失败</string>
    <string name="failed_reason">发送失败：%s</string>
    <string name="share_failed_because_of_no_account">请先登陆再发微博哦</string>
    <string name="fetch_picture_from_other_apps">提取图片……</string>
    <string name="fetch_picture_from_other_apps_failed">提取图片失败</string>
    <string name="you_cancel_login">你取消了授权</string>
    <string name="login_success">授权成功</string>
    <string name="update_account_success">已有该帐号，授权信息更新成功</string>
    <string name="account_management">帐号管理</string>
    <string name="remove_successfully">删除成功</string>
    <string name="add_account">再加个账号，一起用</string>
    <string name="oauth_login">网页授权</string>
    <string name="hack_login">黑魔法授权</string>
    <string name="official_app_login">官方客户端授权</string>
    <string name="pref_normal_title">常规</string>
    <string name="pref_sound_title">音效</string>
    <string name="pref_advanced_title">高级</string>
    <string name="pref_appearance_title">显示</string>
    <string name="pref_theme_title">主题</string>
    <string name="pref_listview_title">列表</string>
    <string name="pref_list_pic_mode_title">图片</string>
    <string name="pref_list_avatar_mode_title">头像</string>
    <string name="pref_font_size_title">字体大小</string>
    <string name="pref_new_message_title">未读消息</string>
    <string name="pref_disable_notification_at_night_title">夜间消息不提醒</string>
    <string name="pref_disable_notification_at_night_summary">凌晨1点到早上8点暂停</string>
    <string name="pref_new_message_type_title">类型</string>
    <string name="pref_mention_to_me_title">\@我的微博</string>
    <string name="pref_comment_to_me_title">收到的评论</string>
    <string name="pref_mention_comment_to_me_title">\@我的评论</string>
    <string name="pref_notification_feedback_title">提醒方式</string>
    <string name="pref_vibrate_title">振动</string>
    <string name="pref_led_title">呼吸灯</string>
    <string name="pref_ringtone_title">铃声</string>
    <string name="notification">通知</string>
    <string name="frequency">间隔</string>
    <string name="draft">草稿箱</string>
    <string name="pref_read_title">阅读</string>
    <string name="pref_data_control_title">流量控制</string>
    <string name="pref_pic_category_title">图片</string>
    <string name="pref_disable_download_pic_title">关闭图片</string>
    <string name="pref_disable_download_pic_summary">同时暂停头像的下载</string>
    <string name="pref_upload_pic_quality_title">上传图片质量</string>
    <string name="pref_msg_count_title">每次获取数据条数</string>
    <string name="pref_comment_repost_list_avatar_title">评论/转发列表的头像</string>
    <string name="pref_enable_wifi_unlimited_msg_count_title">Wifi下尽可能获取数据</string>
    <string name="pref_enable_wifi_unlimited_msg_count_summary">可一次性载入344条新数据</string>
    <string name="pref_data_category_title">数据</string>
    <string name="pref_enable_wifi_auto_download_pic_title">Wifi下预先载入图片</string>
    <string name="pref_enable_wifi_auto_download_pic_summary">只适用大图模式，加快图片获取速度</string>
    <string name="pref_other_title">其他</string>
    <string name="pref_web_browser_title">浏览器</string>
    <string name="pref_enable_internal_web_browser">启用内置浏览器</string>
    <string name="pref_web_browser_summary">内置浏览器可以查阅分享该网页链接的微博</string>
    <string name="pref_gallery_title">图片</string>
    <string name="pref_enable_click_to_close_gallery">启用点击关闭图片</string>
    <string name="pref_cache_title">缓存</string>
    <string name="pref_click_to_clean_cache">点击清理缓存图片</string>
    <string name="getting_cache_size">缓存大小正在统计……</string>
    <string name="pref_about_title">关于</string>
    <string name="pref_general_title">常规</string>
    <string name="pref_support_title">支持</string>
    <string name="pref_thanks_title">感谢</string>
    <string name="pref_storage_title">存储</string>
    <string name="pref_version_title">@string/title_changelog</string>
    <string name="pref_official_weibo_title">&quot;@_卓小霖_</string>
    <string name="pref_suggest_title">反馈意见</string>
    <string name="pref_recommend_title">推荐给微博好友</string>
    <string name="pref_donate_title">捐赠支持开发</string>
    <string name="pref_donate_summary">捐之前想清楚哦</string>
    <string name="pref_play_store_address_title">商店</string>
    <string name="pref_play_store_address_summary">还没提交，给你个代码地址吧</string>
    <string name="pref_code_title">源代码</string>
    <string name="pref_author_title">开发者</string>
    <string name="pref_author_summary">卓小霖</string>
    <string name="pref_icon_design_title">图标</string>
    <string name="pref_cache_path_title">缓存文件路径</string>
    <string name="pref_saved_pic_path_title">图片保存路径</string>
    <string name="pref_saved_log_path_title">崩溃日志保存路径</string>
    <string name="pref_debug_title">调试</string>
    <string name="pref_debug_mem_title">内存信息</string>
</resources>