<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/pref_general_title"
            >
        <Preference
                android:key="pref_official_weibo_key"
                android:title="@string/pref_official_weibo_title"
                >
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="http://weibo.com/zorlin"/>
        </Preference>

        <Preference
                android:key="pref_version_key"
                android:title="@string/pref_version_title"
                android:summary="beta 1.0"
                />

        <Preference
                android:key="pref_author_key"
                android:title="@string/pref_author_title"
                android:summary="@string/pref_author_summary"
                />
        <Preference
                android:title="@string/pref_code_title"
                android:summary="GitHub">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/saispas/Berry"/>
        </Preference>

 <!--   开源协议
 
        <Preference android:title="@string/pref_open_source_license_title">
            <intent
                    android:targetPackage="org.berry"
                    android:targetClass="org.berry.ui.preference.LicenseActivity"/>
        </Preference>
-->
    </PreferenceCategory>
    

    <PreferenceCategory
            android:title="@string/pref_support_title"
            >
       <Preference
                android:key="pref_donate_key"
                android:title="@string/pref_donate_title"
                android:summary="@string/pref_donate_summary"
                >
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="http://me.alipay.com/saispas"/>
        </Preference>
  
  
  
        <Preference
                android:title="@string/pref_play_store_address_title"
                android:summary="@string/pref_play_store_address_summary"
                >
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/saispas/Berry"/>
        </Preference>  


        <Preference
                android:key="pref_suggest_key"
                android:title="@string/pref_suggest_title"
                >
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="saispas@outlook.com"/>

        </Preference>

      <Preference
                android:key="pref_recommend_key"
                android:title="@string/pref_recommend_title"
                >
						
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/pref_thanks_title"
            >
        <Preference
                android:title="@string/pref_icon_design_title"
                android:summary="Berry, version 0.1"/>
       

    </PreferenceCategory>


    <PreferenceCategory
            android:title="@string/pref_storage_title"
            >
 
        <Preference
                android:key="pref_saved_pic_path_key"
                android:title="@string/pref_saved_pic_path_title"
                >

        </Preference>
        
        <Preference
                android:key="pref_cache_path_key"
                android:title="@string/pref_cache_path_title"
                >
								
        </Preference>

     <Preference

                android:key="pref_saved_log_path_key"
                android:title="@string/pref_saved_log_path_title"
                >
							
        </Preference>

    </PreferenceCategory>

  <PreferenceCategory
            android:key="pref_debug_info_key"
            android:title="@string/pref_debug_title"
            >
 						
     <Preference
                android:key="pref_mem_key"
                android:title="@string/pref_debug_mem_title"
                >

        </Preference>
							

    </PreferenceCategory>


</PreferenceScreen>