<?xml version="1.0" encoding="UTF-8"?>

<!-- 设置-常规-显示    -->
<!-- Berry -->
<!-- 14-4-17 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <PreferenceCategory
        android:title="@string/pref_theme_title"
        >
        
        <!-- 这是主题，还可以换哦 -->
        
        <ListPreference
            android:key="theme"
            android:title="@string/pref_theme_title"
            android:dialogTitle="@string/pref_theme_title"
            android:entries="@array/theme"
            android:entryValues="@array/theme_value"
            android:defaultValue="1"/>
    </PreferenceCategory>
    
<!--  这是列表哦 -->

    <PreferenceCategory									
        android:title="@string/pref_listview_title"
        >
        
<!--  这是头像 -->

        <ListPreference										
            android:key="list_avatar_mode"
            android:title="@string/pref_list_avatar_mode_title"
            android:dialogTitle="@string/pref_list_avatar_mode_title"
            android:entries="@array/list_avatar_mode"
            android:entryValues="@array/list_avatar_mode_value"
            android:defaultValue="1"/>
        <ListPreference
            android:key="list_pic_mode"
            android:title="@string/pref_list_pic_mode_title"
            android:dialogTitle="@string/pref_list_pic_mode_title"
            android:entries="@array/list_pic_mode"
            android:entryValues="@array/list_pic_mode_value"
            android:defaultValue="1"/>

        <!--<ListPreference-->
        <!--android:key="list_high_pic_mode"-->
        <!--android:title="@string/pref_list_high_pic_mode_title"-->
        <!--android:dialogTitle="@string/pref_list_high_pic_mode_title"-->
        <!--android:entries="@array/list_high_pic_mode"-->
        <!--android:entryValues="@array/list_high_pic_mode_value"-->
        <!--android:defaultValue="1"/>-->
        
<!-- 这是设置字体大小的 -->

        <ListPreference  							
            android:key="font_size"
            android:title="@string/pref_font_size_title"
            android:dialogTitle="@string/pref_font_size_title"
            android:entries="@array/font"
            android:entryValues="@array/font_value"
            android:defaultValue="15"/>

        <!--<CheckBoxPreference-->
        <!--android:key="list_fast_scroll"-->
        <!--android:title="@string/pref_fast_scroll_title"-->
        <!--android:defaultValue="true"/>-->

    </PreferenceCategory>

</PreferenceScreen>